# pytest-django-asyncio

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
example/pytest_factory_async_repro/: README.md  pytest.ini  repro_settings.py  requirements.txt
example/pytest_factory_async_repro/repro_app/: models.py
example/pytest_factory_async_repro/repro_app/migrations/: 0001_initial.py
example/pytest_factory_async_repro/tests/: conftest.py  factories.py  test_sync_fixture_on_async_test.py  test_workaround_transactional.py
pytest_django_async_db/: pytest_plugin.py
pytest_django_asyncio/: _pytest_plugin_fixtures.py  pytest_plugin.py
tests/: test_db_fixtures.py  test_installed_plugin.py
tests/project/: settings.py
tests/project/sample_app/: apps.py  models.py
tests/project/sample_app/migrations/: 0001_initial.py
