[project]
name = "pytest-django-asyncio"
version = "0.1.0"
description = "Temporary pytest plugin backport for async Django DB fixture handling."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "asgiref>=3.9.1",
    "pytest>=8.0",
    "pytest-django>=4.11.1",
    "pytest-asyncio>=0.22.0",
]

[project.urls]
repository = "https://github.com/lode-braced/pytest-django-asyncio/tree/main"


[project.entry-points.pytest11]
"pytest_django_asyncio.pytest_plugin" = "pytest_django_asyncio.pytest_plugin"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pytest_django_asyncio"
module-root = ""

[dependency-groups]
dev = [
    "Django>=4.2",
    "ruff>=0.12.8",
]

[tool.pytest.ini_options]
addopts = ["-ra"]
DJANGO_SETTINGS_MODULE = "tests.project.settings"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
